Sep 18, 2003

  * ADDED: rdf_edit.pl: named transactions.

Sep 13, 2003

  * FIXED: rehashing on first access/change.

  * FIXED: goal expansion for rdf_retractall/[3,4].

  * ADDED: Handle predicates with multiple rdfs:subPropertyOf triples.

Sep 11, 2003

  * ENHANCED: Duplicate handling

Sep 10, 2003

  * FIXED: Undo/redo administration in rdf_edit.pl

Sep 8, 2003

  * FIXED: rollback in failed transactions.

Sep 4, 2003

  * FIXED: add goal-expansion to rdfe_retractall/3

Sep 2, 2003

  * ADDED: rdfe_transaction_member/2 to inspect actions inside a transaction.

  * FIXED: rdfe_retractall/[3,4] to properly update the journal.

  * FIXED: rdf_assert duplicate administration (crashes rdf_retractall on
    assertion failure).

Aug 18, 2003

  * MODIFIED: Assume ids starting with __ are anonymous

Aug 6, 2003

  * FIXED: namespace generation in rdf_save/2.  Laura Hollink

Aug 01, 2003

  * ADDED: rdf_save/[1,2] to generate rdf:parseType=Collection for anonymous
    rdf lists.

  * FIXED: rdf_save/[1,2]

Jun 23, 2003

  * ADDED: rdf_generation/1

Jun 20, 2003

  * FIXED: Memory leak in rdf_reachable/3.

  * FIXED: Various installation issues

Jun 10, 2003

  * Initial public version